<resources>
    <string name="app_name">SpeakOut</string>
    <string name="username_hint">Username</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_new_post">New Post</string>

    <string name="search_no_results">No results found</string>

    <!--Post strings-->
    <string name="sample_post_text">This is a sample posThis is a sample posThis is a sample posThis is a sample posThis is a sample post text to check how does this large text looks when it is shown in layout. It should be more than 150 characters so that we can make sure that even large text also looks fine.</string>
    <string name="sample_hindi_text">आग इतनी भीषण है कि मौके पर तुरंत 12 दमकल गाड़ियों को रवाना किया गया है. इसके अलावा 500 से ज्यादा दमकलकर्मियों को आग बुझाने के काम में लगाया गया है.</string>
    <string name="enter_content_hint">Speak your heart out…</string>
    <string name="hashtag_hint">Type hashtag here…</string>
    <string name="type_here">Type here…</string>

    <string name="error_empty">Field can\'t be empty</string>
    <string name="loading_hint">Loading…</string>
    <string name="hash_text">＃</string>
    <string name="tick_text">✓</string>

    <!--Post menu strings-->
    <string name="copy_content">Copy content</string>
    <string name="delete_post">Delete</string>
    <string name="save_post">Save</string>


    <string name="error_something_went_wrong">Something went wrong. Please try again</string>
    <string name="error_image_load_fail">Failed to load. Tap to retry</string>

    <!--Profile strings-->
    <string name="follow">Follow</string>
    <string name="un_follow">Unfollow</string>
    <string name="cancel">Cancel</string>
    <string name="following">Following</string>
    <plurals name="number_of_posts">
        <item quantity="one">Post</item>
        <item quantity="other">Posts</item>
    </plurals>
    <plurals name="number_of_followers">
        <item quantity="one">Follower</item>
        <item quantity="other">Followers</item>
    </plurals>
    <plurals name="number_of_followings">
        <item quantity="one">Following</item>
        <item quantity="other">Followings</item>
    </plurals>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_error">Enter valid mobile number</string>
    <string name="full_name">Full Name</string>

    <string name="vertical_ellipse">⋮</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="is_from_deep_link">isFromDeepLink</string>

    <string name="notification_follow"><![CDATA[<b>%s</b>]]> started following you.</string>
    <string name="like_post"><![CDATA[<b>%s</b>]]> liked your post.</string>

    <!--Time related strings-->
    <plurals name="plural_second">
        <item quantity="one">%d second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>

    <plurals name="plural_minute">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>

    <plurals name="plural_hour">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>

    <plurals name="plural_week">
        <item quantity="one">%d week ago</item>
        <item quantity="other">%d weeks ago</item>
    </plurals>

    <plurals name="plural_day">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <plurals name="plural_month">
        <item quantity="one">%d month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>

    <plurals name="plural_year">
        <item quantity="one">%d year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>

    <string name="hint_un_follow">You won\'t get updates from @%s</string>
    <string name="text_bookmarks">Bookmarks</string>
    <string name="text_logout">Logout</string>
    <string name="logout_info">Are you sure you want\nto logout?</string>
    <string name="app_version">Version: %s</string>
    <string name="made_in_india">Made in India\n❤️</string>
    <string name="about">About</string>
    <string name="update_available">A new version is available.</string>
    <string name="updating">Updating..</string>
    <string name="search_here">Search here…</string>
    <string name="confirm">Confirm</string>
    <string name="phone_number">Phone Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="sending_otp">Sending OTP</string>
    <string name="otp">OTP</string>
</resources>
