<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_grey"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_new_post"
        android:icon="@drawable/ic_create_new"
        android:title="@string/title_new_post" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_outline_account_circle"
        android:title="@string/title_profile" />
</menu>
