<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dialog_unfollow_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="12dp"
        tools:src="@drawable/ic_favorite" />

    <TextView
        android:id="@+id/dialog_unfollow_hint_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textAlignment="center"
        tools:text="@string/sample_post_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="28dp"
        android:background="@color/grey_300" />

    <TextView
        android:id="@+id/dialog_unfollow_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/un_follow"
        android:textColor="@color/indigo_500"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey_300" />

    <TextView
        android:id="@+id/dialog_unfollow_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>