<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <action
        android:id="@+id/action_global_profileFragment"
        app:destination="@id/navigation_profile" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.speakout.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_profile_fragment"
            app:destination="@id/navigation_profile" />

        <action
            android:id="@+id/action_home_to_usersListFragment"
            app:destination="@id/usersListFragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.speakout.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.speakout.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.speakout.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="userId"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="profileUrl"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="transitionTag"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="username"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_navigation_profile_to_usersListFragment"
            app:destination="@id/usersListFragment" />
    </fragment>

    <fragment
        android:id="@+id/usersListFragment"
        android:name="com.speakout.users.UsersListFragment"
        android:label="UsersListFragment"
        tools:layout="@layout/users_list_fragment">

        <argument
            android:name="userId"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="actionType"
            android:defaultValue="Likes"
            app:argType="com.speakout.users.ActionType" />

        <action
            android:id="@+id/action_usersListFragment_to_navigation_profile"
            app:destination="@id/navigation_profile" />

    </fragment>


</navigation>