<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNewPostSurface"
    android:orientation="vertical"
    tools:context=".posts.create.CreateNewPostFragment">

    <include
        android:id="@+id/toolbarContainer"
        layout="@layout/layout_toolbar" />

    <FrameLayout
        android:id="@+id/create_post_container_layout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:background="@color/black">

        <TextView
            android:id="@+id/create_post_content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:gravity="center"
            android:hint="@string/enter_content_hint"
            android:maxLength="300"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textColorHint="@color/grey_600" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/bahram"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/yellow_500" />


    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_post_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="bottom|end"
        android:layout_margin="12dp"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_24dp"
        android:text="@string/next"
        android:textAllCaps="false" />

</FrameLayout>