<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_post_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPostOptionsDialogSurface"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_option_save"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_post"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?colorOnSurface"
            app:icon="@drawable/ic_download"
            app:iconPadding="16dp"
            app:iconTint="?colorOnSurface" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_option_copy"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copy_content"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?colorOnSurface"
            app:icon="@drawable/ic_copy"
            app:iconPadding="16dp"
            app:iconTint="?colorOnSurface" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_option_delete"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_post"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?colorOnSurface"
            app:icon="@drawable/ic_delete"
            app:iconPadding="16dp"
            app:iconTint="?colorOnSurface" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>