<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.LogoutDialog"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/colorProfileSurface"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="28dp">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_height="60dp"
            android:layout_width="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />


        <TextView
            android:id="@+id/tv_logout_info"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:text="@string/logout_info"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile" />

        <TextView
            android:background="?android:selectableItemBackground"
            android:id="@+id/tv_cancel"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp"
            android:layout_width="0dp"
            android:paddingVertical="8dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_logout_info" />

        <TextView
            android:background="?android:selectableItemBackground"
            android:id="@+id/tv_logout"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:paddingVertical="8dp"
            android:text="@string/text_logout"
            android:textAlignment="center"
            android:textColor="?colorError"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_cancel"
            app:layout_constraintTop_toTopOf="@id/tv_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>