<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileEditFragment">

        <include
            android:id="@+id/include"
            layout="@layout/layout_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile_edit_fragment_iv"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            tools:src="@tools:sample/avatars" />


        <View
            android:id="@+id/profile_edit_bg_view"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/dr_circle_stroke_bg_grey500"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/profile_edit_add_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_plus"
            app:layout_constraintBottom_toBottomOf="@+id/profile_edit_fragment_iv"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="@+id/profile_edit_fragment_iv"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/profile_edit_fragment_iv"
            app:layout_constraintTop_toTopOf="@+id/profile_edit_fragment_iv"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_username_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_fragment_iv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_edit_username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_edit"
                android:ellipsize="end"
                android:focusable="false"
                android:hint="@string/username_hint"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:maxLength="20"
                android:maxLines="1">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_full_name_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_username_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_edit_full_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/full_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLength="30"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_mobile_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_full_name_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_edit_mobile_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/mobile_number"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/profile_edit_update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:text="@string/update"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit_mobile_til" />

        <ProgressBar
            android:id="@+id/profile_edit_pb"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/profile_edit_fragment_iv"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="@+id/profile_edit_fragment_iv"
            app:layout_constraintStart_toStartOf="@+id/profile_edit_fragment_iv"
            app:layout_constraintTop_toTopOf="@+id/profile_edit_fragment_iv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>